--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,43 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>MiPWAManual</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+    <title>MiPWAManual</title>
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root>
+
+    <img src="assets/img/1.jpg" style="height: 5rem">
+    <img src="assets/img/2.jpg" style="height: 5rem">
+    <img src="assets/img/3.jpg" style="height: 5rem">
+
+
+    <script>
+        if (navigator.serviceWorker) {
+            navigator.serviceWorker.register('/sw.js').then(function (reg) {
+
+                if (reg.installing) {
+                    console.log('Service worker installing');
+                } else if (reg.waiting) {
+                    console.log('Service worker installed');
+                } else if (reg.active) {
+                    console.log('Service worker active');
+                }
+
+            }).catch(function (error) {
+                // registration failed
+                console.log('Registration failed with ' + error);
+            });
+        }
+
+    </script>
+
 </body>
+
 </html>
