Modificacion path service worker

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <script>
         if (navigator.serviceWorker) {
-            navigator.serviceWorker.register('/sw.js').then(function (reg) {
+            navigator.serviceWorker.register('./sw.js').then(function (reg) {
 
                 if (reg.installing) {
                     console.log('Service worker installing');
