Cambios en el SW

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>MiPWAManual</title>
-    <base href="/">
+    <!-- <base href="/"> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,12 +12,7 @@
 
 <body>
     <app-root></app-root>
-
-    <img src="assets/img/1.jpg" style="height: 5rem">
-    <img src="assets/img/2.jpg" style="height: 5rem">
-    <img src="assets/img/3.jpg" style="height: 5rem">
-
-
+    
     <script>
         if (navigator.serviceWorker) {
             navigator.serviceWorker.register('./sw.js').then(function (reg) {
